crates/procenv/tests/compile_fail/missing_var_option.stderr
error: Missing required `var` option
 --> tests/compile_fail/missing_var_option.rs:7:5
  |
7 |     #[env(default = "8080")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
